<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RFID</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="place">Place</string>
    <string name="tagIds">TagIds</string>
    <string name="send">Send</string>
    <string name="disconnect">Disconnect</string>
    <string name="connect">Connect</string>
    <string name="decrease">Decrease</string>
    <string name="read">Read</string>
    <string name="tsubo">http://www.hongo.wide.ad.jp/~tsubo/index.php</string>
    <string name="tkk">http://133.11.236.196:8080/api/data_reg</string>
    <string name="server">Server</string>
    <string name="equipment">Equipment</string>
    <string name="elab">Elab</string>
    <string name="condition">Condition</string>
    <string name="timer">Timer</string>
    <string name="loop">Loop</string>
    <string name="tag_id">TagID</string>
    <string name="register">Register</string>
    <string name="publish">Publish new ID</string>
    <string name="err_msg">ErrorMessage</string>
    <string name="tkk_new">http://133.11.266.196:8080/api/new</string>
    <string name="tsubo_new">http://www.hongo.wide.ad.jp/~tsubo/new.php</string>
    <string name="low">Low</string>
    <string name="mute">Mute</string>
    <string name="high">High</string>
    <string name="volume">Volume</string>

</resources>